# dbt-duckdb-dagster

./: .gitignore  .user.yml  README.md  profiles.yml  pyproject.toml
dagster_project/: assets.py  definitions.py  jobs.py
dbt_project/: dbt_project.yml
dbt_project/models/0__raw/2019/: README.md  raw__2019_week01__input.py  raw__2019_week01__input.yml  raw__2019_week02__input.py  raw__2019_week02__input.yml  raw__2019_week03__input.py  raw__2019_week03__input.yml  raw__2019_week04__nba_schedule.py  raw__2019_week04__nba_schedule.yml  raw__2019_week05__contact_centre_data.py  raw__2019_week05__contact_centre_data.yml  raw__2019_week06__soap_company_sales.py  raw__2019_week06__soap_company_sales.yml  raw__2019_week07__shipping_data.py  raw__2019_week07__shipping_data.yml  raw__2019_week08__theft_records.py  raw__2019_week08__theft_records.yml  raw__2019_week09__twitter_complaints.py  raw__2019_week09__twitter_complaints.yml  raw__2019_week10__mailing_list.py  raw__2019_week10__mailing_list.yml  raw__2019_week11__stock_data.py  raw__2019_week11__stock_data.yml  raw__2019_week12__system_downtime.py  raw__2019_week12__system_downtime.yml  raw__2019_week13__credit_balances.py  raw__2019_week13__credit_balances.yml  raw__2019_week14__cafe_transactions.py  raw__2019_week14__cafe_transactions.yml  raw__2019_week15__broker_purchases.py  raw__2019_week15__broker_purchases.yml  raw__2019_week16__sales_data.py  raw__2019_week16__sales_data.yml  raw__2019_week17__voting_preferences.py  raw__2019_week17__voting_preferences.yml  raw__2019_week18__anime_data.py  (+57 more)
(+10 files in other folders)
