[project]
name = "dbt-duckdb-dagster"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "dagster>=1.9",
    "dagster-dbt>=0.25",
    "dagster-webserver>=1.9",
    "polars>=1.0",
    "pyarrow>=17.0",
    "pandas>=2.0",
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dagster_project"]

[tool.dagster]
module_name = "dagster_project"
project_name = "dbt-duckdb-dagster"
